welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-13: error: Unmatched closing brace '}' ignored here
	}
        ^Program:-11: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Program:-7: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^Program:3: error: ';' expected but '=' found.
	vuBiscuit : Boolean = false
                            ^Program:4: error: '<-' expected but ')' found.
	for ( i -> 1 to 6 ) {
                          ^Program:11: error: illegal start of simple expression
	}
        ^